# bytetrack-rs

./: Cargo.toml  LICENSE
src/: integration.rs  lib.rs  tracker.rs
src/integration/: builder.rs  burn_backend.rs  detector.rs  pipeline.rs
src/tracker/: byte_tracker.rs  kalman_filter.rs  matching.rs  rect.rs  strack.rs  track_state.rs
tests/: tracking_test.rs
